# check-comma-in-class-attributes

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  check_comma_in_class_attributes.py  pyproject.toml
tests/: test_check_comma_in_class_attributes.py
tests/resources/: class_with_comma_in_attributes.py  class_without_attributes.py  class_without_comma_in_attributes.py  file_without_class.py
